# alqac-legal-agent

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.llamacpp.yml  docker-compose.vllm.yml  pyproject.toml
Data/: ALQAC2026_public_test.json  corpus_law_pub.json
configs/: alqac.yaml
docs/: ARCHITECTURE.md
eval/: compare_runs.py  list_runs.py  make_submission.py  metrics.py  run_dev_set.py
retrieval/: alqac_env.py  build_law_index.py  case_api_client.py  embeddings.py  law_index.py  law_refs_registry.py  summarize_corpus.py  summarize_laws.py
scripts/: setup.sh
stopping/: budget_tracker.py
tools/: search_case.py  search_law.py
