[project]
name = "alqac-2026"
version = "0.1.0"
description = "ALQAC 2026 Legal Case Outcome Prediction harness (mini-swe-agent + vLLM Qwen3.5-9B)"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "rank-bm25>=0.2.2",
  "transformers>=4.45",
  "torch>=2.3",
  "numpy>=1.26",
  "sentencepiece>=0.2",
  "openai>=1.40",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
  "pydantic>=2.7",
  "litellm>=1.50",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[tool.uv.sources]
minisweagent = { path = "./mini-swe-agent", editable = true }

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
